organizations page nits

--- a/content/cloud-docs/users-teams-organizations/organizations.mdx
+++ b/content/cloud-docs/users-teams-organizations/organizations.mdx
@@ -26,7 +26,7 @@ In addition to the Terraform Cloud UI, you can use the following methods to mana
 Terraform Cloud displays your current organization in the left of the top navigation bar. To select an organization:
 
 1. Click the current organization name to view a list of all the organizations where you are a member.
-1. Click an organization to select it.
+1. Click an organization to select it. Terraform Cloud displays list of workspaces within that organization.
 
 ## Joining and Leaving Organizations
 
@@ -64,7 +64,7 @@ You may be able to manage the following types of organization permissions.
 
 #### General
 
-Refer the organizations name and contact email. Organization owners can also  change the organization's name and contact email or delete the organization.
+Review the organization name and contact email. Organization owners can also  change the organization name and contact email or delete the organization.
 
 !> **Warning:** Deleting or renaming an organization can be very disruptive. We strongly recommend against deleting or renaming organizations with active members.
 
@@ -87,9 +87,9 @@ Review a list of tags for all resources across the organization. When you delete
 
 #### Teams
 
--> **Note:** Team management is a paid feature, available as part of the **Team** upgrade package. Free organizations only include an owners team that can include up to five members. Refer to [Terraform Cloud pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
+-> **Note:** Team management is a paid feature, available as part of the **Team** upgrade plan. Free organizations only include an owners team that can include up to five members. Refer to [Terraform Cloud pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
 
-All users in an organization can access the **Teams** page, which displays a list of [teams][] within the organiation. This excludes [secret teams](/cloud-docs/users-teams-organizations/teams#team-visibility) that you are not a member of. You can also view team membership and manage team API tokens.
+All users in an organization can access the **Teams** page, which displays a list of [teams][] within the organiation. This excludes [secret teams](/cloud-docs/users-teams-organizations/teams#team-visibility) where you are not a member. You can also view team membership and manage team API tokens.
 
 Organization owners can also create and delete teams, manage team membership, and manage team API tokens. Remember that users must accept an invitation to the organization before you can add them to teams.
 
@@ -101,22 +101,20 @@ Organization owners can invite Terraform Cloud users into the organization, canc
 
 The list of users has one tab for active users and one tab for invited users who have not yet accepted their invitations. For active users, the list includes usernames, email addresses, avatar icons, two-factor authentication status, and current team memberships. Use the **Search by username or email** field to filter these lists.
 
-User invitations are always sent by email; you cannot invite someone using their Terraform Cloud username.
-
-To invite a user to an organization:
+User invitations are always sent by email; you cannot invite someone using their Terraform Cloud username. To invite a user to an organization:
 
 1. Click **Invite a user**. The **invite a user** box appears.
 1. Enter the user's email address and optionally add them to one or more teams. If the user accepts the invitation, Terraform Cloud will be automatically add them to the specified teams.
 
-All permissions in Terraform Cloud are managed through teams. Users can join an organization without belonging to any teams, but they cannot use Teraform Cloud features until they also belong to a team. Refer to [permissions](/cloud-docs/users-teams-organizations/permissions) for details.
+All permissions in Terraform Cloud are managed through teams. Users can join an organization without belonging to any teams, but they cannot use Teraform Cloud features until they belong to a team. Refer to [permissions](/cloud-docs/users-teams-organizations/permissions) for details.
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
 #### Variable Sets
 
-Variable sets let you reuse the same variables across multiple workspaces in the organization. For example, you could define a variable set of provider credentials and automatically apply it to several workspaces, rather than manually defining credential variables in each. Changes to variable sets instantly apply to all appropriate workspaces, saving time and reducing errors from manual updates.
+View all of the available variable sets and their variables. Users with [`read and write variables` permissions](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) can also create variable sets and assign them to one or more workspaces.
 
-The **Variable Sets** page allows everyone in an organization to view all of the available variable sets and their variables. Users with [`read and write variables` permissions](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) can also create variable sets and assign them to one or more workspaces.
+Variable sets let you reuse the same variables across multiple workspaces in the organization. For example, you could define a variable set of provider credentials and automatically apply it to several workspaces, rather than manually defining credential variables in each. Changes to variable sets instantly apply to all appropriate workspaces, saving time and reducing errors from manual updates.
 
 Refer to the [variables overview](/cloud-docs/workspaces/variables) documentation for details about variable types, scope, and precedence. Refer to [managing variables](/cloud-docs/workspaces/variables/managing-variables) for details about how to create and manage variable sets.
 
@@ -124,7 +122,7 @@ Refer to the [variables overview](/cloud-docs/workspaces/variables) documentatio
 
 #### Cost Estimation
 
--> **Note:** Cost estimation is a paid feature, available as part of the **Team & Governance** package. Refer to [Terraform pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
+-> **Note:** Cost estimation is a paid feature, available as part of the **Team & Governance** plan. Refer to [Terraform pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
 
 Enable and disable the [cost estimation](/cloud-docs/cost-estimation) feature for all workspaces.
 
@@ -134,7 +132,7 @@ This is a deprecated interface for managing Sentinel policies. Use the policy se
 
 #### Policy Sets
 
--> **Note:** Sentinel policies are a paid feature, available as part of the **Team & Governance** package. Refer to [Terraform pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
+-> **Note:** Sentinel policies are a paid feature, available as part of the **Team & Governance** plan. Refer to [Terraform pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
 
 Create groups of [Sentinel policies](/cloud-docs/sentinel) from a connected VCS repository and assign those policy sets to workspaces. Sentinel is an embedded policy-as-code framework that can enforce rules about Terraform runs within an organization. You must have [permission to manage policies](/cloud-docs/users-teams-organizations/permissions).
 
@@ -148,7 +146,7 @@ Manage the run tasks that you can add to workspaces within the organization. [Ru
 
 #### Agents
 
--> Note: Terraform Cloud Agents are a paid feature, available as part of the **Business** package. Refer to [Terraform pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
+-> Note: Terraform Cloud Agents are a paid feature, available as part of the **Business** plan. Refer to [Terraform pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
 
 Create and manage [Terraform Cloud agent pools](/cloud-docs/agents). Terraform Cloud Agents let Terraform Cloud to communicate with isolated, private, or on-premises infrastructure.  This is useful for on-premises infrastructure types such as vSphere, Nutanix, OpenStack, enterprise networking providers, and infrastructure within a protected enclave.
 
@@ -166,7 +164,7 @@ Manage [SSH keys for cloning Git-based modules](/cloud-docs/workspaces/settings/
 
 #### SSO
 
--> **Note:** Single sign-on is a paid feature, available as part of the **Business** package. Refer to [Terraform pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
+-> **Note:** Single sign-on is a paid feature, available as part of the **Business** plan. Refer to [Terraform pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
 
 Organization owners can [set up an SSO provider](/cloud-docs/users-teams-organizations/single-sign-on) for the organization.
 
@@ -182,7 +180,7 @@ You can disable this behavior if it creates too many status checks to your VCS p
 
 -> **Note:** This feature is in beta.
 
-Review the event logs for GitLab.com cnnections.
+Review the event logs for GitLab.com connections.
 
 #### VCS Providers
 
@@ -195,8 +193,8 @@ Configure [VCS providers](/cloud-docs/vcs) to use in the organization. You must 
 
 Terraform Cloud paid features are available as a free trial. When a free trial has expired, the organization displays a banner reading **TRIAL EXPIRED — Upgrade Required** in the top navigation bar.
 
-Organizations with expired trials return to the feature set of a free organization, but they retain any data created as part of paid features. Specifically, Terraform Cloud performs the following actions:
+Organizations with expired trials return to the feature set of a free organization, but they retain any data created as part of paid features. Specifically, Terraform Cloud disables the following features:
 
-- Disables teams other than `owners` and locks users who do not belong to the `owners` team out of the organization. Terraform Cloud preserves team membership and permissions and re-enables them after you upgrade the organization.
-- Disables Sentinel policy checks. Terraform Cloud preserves existing policies and policy sets and re-enables them after you upgrade the organization.
-- Disables cost estimation.
+- Teams other than `owners` and locks users who do not belong to the `owners` team out of the organization. Terraform Cloud preserves team membership and permissions and re-enables them after you upgrade the organization.
+- Sentinel policy checks. Terraform Cloud preserves existing policies and policy sets and re-enables them after you upgrade the organization.
+- Cost estimation.
