--- a/content/cloud-docs/users-teams-organizations/organizations.mdx
+++ b/content/cloud-docs/users-teams-organizations/organizations.mdx
@@ -148,7 +148,7 @@ Manage the run tasks that you can add to workspaces within the organization. [Ru
 
 -> Note: Terraform Cloud Agents are a paid feature, available as part of the **Business** plan. Refer to [Terraform pricing](https://www.hashicorp.com/products/terraform/pricing) for details.
 
-Create and manage [Terraform Cloud agent pools](/cloud-docs/agents). Terraform Cloud Agents let Terraform Cloud to communicate with isolated, private, or on-premises infrastructure.  This is useful for on-premises infrastructure types such as vSphere, Nutanix, OpenStack, enterprise networking providers, and infrastructure within a protected enclave.
+Create and manage [Terraform Cloud agent pools](/cloud-docs/agents). Terraform Cloud Agents let Terraform Cloud communicate with isolated, private, or on-premises infrastructure. This is useful for on-premises infrastructure types such as vSphere, Nutanix, OpenStack, enterprise networking providers, and infrastructure within a protected enclave.
 
 #### API Tokens
 
