--- a/content/cloud-docs/users-teams-organizations/organizations.mdx
+++ b/content/cloud-docs/users-teams-organizations/organizations.mdx
@@ -99,7 +99,7 @@ Organization owners can also create and delete teams, manage team membership, an
 
 Organization owners can invite Terraform Cloud users into the organization, cancel invitations, and remove existing members.
 
-The list of users has one tab for active users and one tab for invited users who have not yet accepted their invitations. For active users, the list includes usernames, email addresses, avatar icons, two-factor authentication status, and current team memberships. Use the **Search by username or email** field to filter these lists.
+The list of users is separated into one tab for active users and one tab for invited users who have not yet accepted their invitations. For active users, the list includes usernames, email addresses, avatar icons, two-factor authentication status, and current team memberships. Use the **Search by username or email** field to filter these lists.
 
 User invitations are always sent by email; you cannot invite someone using their Terraform Cloud username. To invite a user to an organization:
 
