--- a/content/cloud-docs/users-teams-organizations/organizations.mdx
+++ b/content/cloud-docs/users-teams-organizations/organizations.mdx
@@ -70,7 +70,7 @@ Review the organization name and contact email. Organization owners can also cha
 
 To rename an organization that manages infrastructure:
 
-1.  Alert all members of the organization about its impending deletion.
+1. Alert all members of the organization about the name change.
 1. Cancel in progress and pending runs or wait for them to finish. Terraform Cloud cannot change the name of an organization with runs in progress.
 1. Lock all workspaces to ensure that no new runs will start before you change the name.
 1. Rename the organization.
