--- a/content/cloud-docs/users-teams-organizations/organizations.mdx
+++ b/content/cloud-docs/users-teams-organizations/organizations.mdx
@@ -56,7 +56,7 @@ To view and manage an organization's settings, click **Settings** in the top nav
 
 The contents of the organization settings depends on your permissions within the organization. All users can review the organization's contact email, view the membership of any teams they belong to, and view the organization's authentication policy. [Organization owners][owners] can view and manage the entire list of organization settings. Refer to [Organization Permissions](/cloud-docs/users-teams-organizations/permissions#organization-permissions) for details.
 
-You may be able to manage the following types of organization permissions.
+You may be able to manage the following organization permissions.
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
