--- a/content/cloud-docs/users-teams-organizations/users.mdx
+++ b/content/cloud-docs/users-teams-organizations/users.mdx
@@ -22,7 +22,7 @@ Use the [Account API](/cloud-docs/api-docs/account) to get account details, upda
 Creating an account requires a username, an email address, and a password. To use Terraform Cloud, you must create an account through one of the following methods:
 
 - **Invitation Email:** When a user sends you an invitation to join an existing Terraform Cloud organization, the email includes a sign-up link. After you create an account, you will automatically join that organization and can begin using Terraform Cloud.
-- **Sign-Up Page:** For Terraform Cloud, go to [https://app.terraform.io/signup/account](https://app.terraform.io/signup/account). For Terraform Enterprise, go to `https://<TFE HOSTNAME>/signup/account`. After you create an account, you will not belong to any organizations. To begin using Terraform Cloud, you can either [create an organization](/cloud-docs/users-teams-organizations/organizations#creating-organizations) or ask an organization owner to send you an invitation email.
+- **Sign-Up Page:** For Terraform Cloud, go to [https://app.terraform.io/signup/account](https://app.terraform.io/signup/account). For Terraform Enterprise, go to `https://<TFE HOSTNAME>/signup/account`. After you create an account, you will not belong to any organizations. To begin using Terraform Cloud, you can either [create an organization](/cloud-docs/users-teams-organizations/organizations#creating-organizations) or ask an organization owner to send you an invitation email to join their organization.
 
 ## Joining Organizations and Teams
 
