--- a/content/cloud-docs/users-teams-organizations/organizations.mdx
+++ b/content/cloud-docs/users-teams-organizations/organizations.mdx
@@ -40,7 +40,7 @@ You can leave an organization from your user account settings. Refer to [User Se
 
 On Terraform Enterprise, administrators can restrict your ability to create organizations. Refer to [Administration: General Settings](/enterprise/admin/application/general#organization-creation) for details.
 
-On Terraform Cloud, any user can create a new organization. If you do not belong to any organizations, Terraform Cloud prompts you to create one the first time you log in. Otherwise, to create an organization:
+On Terraform Cloud, any user can create a new organization. If you do not belong to any organizations, Terraform Cloud prompts you to create one the first time you log in. To create an organization:
 
 1. Click the current organization name and select **Create new organization**. The **Create a new organization** page appears.
 1. Enter a unique **Organization name** Organization names can include numbers, letters, underscores (`_`), and hyphens (`-`).
