--- a/content/cloud-docs/users-teams-organizations/users.mdx
+++ b/content/cloud-docs/users-teams-organizations/users.mdx
@@ -26,7 +26,7 @@ Creating an account requires a username, an email address, and a password. To us
 
 ## Joining Organizations and Teams
 
-An organization owner must [invite you to join an organization](/cloud-docs/users-teams-organizations/organizations#users). After you join, the organization owner must also [add you to one or more teams](/cloud-docs/users-teams-organizations/teams#managing-team-membership).
+An organization owner must [invite you to join their organization](/cloud-docs/users-teams-organizations/organizations#users). After you join, the organization owner must also [add you to one or more teams](/cloud-docs/users-teams-organizations/teams#managing-team-membership).
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
