Fix data storage requirements

--- a/content/enterprise/install/pre-install-checklist.mdx
+++ b/content/enterprise/install/pre-install-checklist.mdx
@@ -27,10 +27,11 @@ and should be selected based on your organization's preferences.
 
 ## Obtain Credentials
 
-You must obtain an Enterprise license and a TLS certificate for Terraform Enterprise to use. If you choose the sexternal services operational mode, Terraform Enterprise requires access to an S3-compliant endpoint for object storage. Refer to [Credentials](/enterprise/requirements/credentials) for details.
+You must obtain an Enterprise license and a TLS certificate for Terraform Enterprise to use. If you choose the external services operational mode, Terraform Enterprise requires access to an S3-compliant endpoint for object storage. Refer to [Credentials](/enterprise/requirements/credentials) for details.
 
 ## Prepare Data Storage
-Make sure your data storage services or device meet Terraform Enterprise's requirements. Refer to [Hardware and Data Storage Requirements](/enterprise/requirements/hardware-data-storage) for details.
+
+Make sure your data storage services or device meet Terraform Enterprise's requirements. Refer to [Data Storage Requirements](/enterprise/requirements/data-storage/operational-mode-requirements) for details.
 
 ## Configure Linux Instance
 
