--- a/content/enterprise/requirements/data-storage/operational-mode-requirements.mdx
+++ b/content/enterprise/requirements/data-storage/operational-mode-requirements.mdx
@@ -1,22 +1,8 @@
 ---
-page_title: Hardware and Data Storage - Requirements - Terraform Enterprise
+page_title: Operational Mode Requirements - Requirements - Terraform Enterprise
 description: >-
-  Required disk space and memory for your Terraform Enterprise instance.
+  Data storage requirements differ based on the operational mode of your Terraform Enterprise instance.
 ---
-
-# Hardware and Data Storage Requirements
-
-TBD Intro
-
-## Hardware
-
-These requirements provide the instance with enough resources to run the
-Terraform Enterprise application as well as the Terraform plans and applies.
-
-- At least 10GB of disk space on the root volume
-- At least 40GB of disk space for the Docker data directory (defaults to `/var/lib/docker`)
-- At least 8GB of system memory
-- At least 4 CPU cores
 
 ## Data Storage
 
@@ -27,7 +13,7 @@ Make sure your data storage services or device meet Terraform Enterprise's requi
 ### External Services Mode
 
 External Services mode has the following requirements:
-  
+
   - [PostgreSQL Requirements](/enterprise/before-installing/data-storage-requirements/postgres-requirements)
   - Any S3-compatible object storage service, GCP Cloud Storage or Azure blob storage meets Terraform Enterprise's object storage requirements. You must create a bucket for Terraform Enterprise to use, and specify that bucket during installation. Depending on your infrastructure provider, you might need to ensure the bucket is in the same region as the Terraform Enterprise instance.
     - Disable any lifecycle rules that would delete, archive, or transition objects in this container. Terraform Enterprise expects to manage all data the object storage service, so any lifecycle moves may result in unexpected data inconsistencies.
