--- a/content/enterprise/requirements/os-specific/centos-requirements.mdx
+++ b/content/enterprise/requirements/os-specific/centos-requirements.mdx
@@ -8,8 +8,8 @@ When installing Terraform Enterprise on CentOS Linux, ensure you meet the follow
 
 ## Install Requirements
 
-* A [supported version](/enterprise/before-installing#operating-system-requirements) of CentOS.
-* A [supported Docker Engine](/docs/enterprise/before-installing/index.html#docker-engine-requirements) configuration.
+* A [supported version](/enterprise/requirements/os-specific/supported-os) of CentOS.
+* A [supported Docker Engine](/enterprise/requirements/docker) configuration.
 
 ## FAQ
 
