--- a/content/enterprise/requirements/os-specific/rhel-requirements.mdx
+++ b/content/enterprise/requirements/os-specific/rhel-requirements.mdx
@@ -8,8 +8,8 @@ When installing Terraform Enterprise on RedHat Enterprise Linux (RHEL), ensure y
 
 ## Install Requirements
 
-* A [supported version](/enterprise/before-installing#operating-system-requirements) of RedHat Enterprise Linux.
-* A [supported Docker Engine](/enterprise/before-installing#docker-engine-requirements) configuration.
+* A [supported version](/enterprise/requirements/os-specific/supported-os) of RedHat Enterprise Linux.
+* A [supported Docker Engine](//enterprise/requirements/docker) configuration.
 
 ### Pinning the Docker Version
 
