--- a/content/enterprise/requirements/credentials.mdx
+++ b/content/enterprise/requirements/credentials.mdx
@@ -6,7 +6,7 @@ description: >-
 
 # Credentials
 
-Ensure you have all of the following credentials.
+Terraform Enterprise requires the following credentials and permissions. 
 
 ## License File
 
