--- a/content/enterprise/install/pre-install-checklist.mdx
+++ b/content/enterprise/install/pre-install-checklist.mdx
@@ -31,7 +31,7 @@ You must obtain an Enterprise license and a TLS certificate for Terraform Enterp
 Make sure your data storage services or device meet Terraform Enterprise's requirements. These differ depending on the operational mode you choose for your instance. Refer to the following for your use case:
 
 - [Operational Mode Data Storage Requirements](/enterprise/requirements/data-storage/operational-mode-requirements)
-- [PostgreSQ Requirements](/enterprise/requirements/data-storage/postgres-requirements)
+- [PostgreSQL Requirements](/enterprise/requirements/data-storage/postgres-requirements)
 - [Minio Setup Guide](/enterprise/requirements/data-storage/minio-setup-guide)
 - [Externally Managed Vault](/enterprise/requirements/data-storage/vault)
 
