--- a/content/enterprise/requirements/data-storage/operational-mode-requirements.mdx
+++ b/content/enterprise/requirements/data-storage/operational-mode-requirements.mdx
@@ -20,7 +20,7 @@ External Services mode has the following requirements:
 
 ## Active/Active Mode
 
-Active/Active operational mode has the following requirements:
+Active/Active mode has the same requirements as External Services, with the additions of an external Redis server, and a fully automated install method. Specifically, Active/Active operational mode has the following additional requirements:
 
   - Redis server v5 or v6
   - Redis Cluster is _not_ supported.
