--- a/content/cloud-docs/users-teams-organizations/users.mdx
+++ b/content/cloud-docs/users-teams-organizations/users.mdx
@@ -34,7 +34,7 @@ Terraform Cloud sends user invitations by email. If the invited email address ma
 
 ## Site Admin Permissions
 
-On Terraform Enterprise instances, some user accounts have a special site admin permission that allows them to administrate the entire instance.
+On Terraform Enterprise instances, some user accounts have a special site admin permission that allows them to administer the entire instance.
 
 Admin permissions are distinct from normal organization-level permissions, and they apply to a different set of UI controls and API endpoints. Admin users can administer any resource across the instance when using the site admin pages or the [admin API](/cloud-docs/api-docs/admin), but they have normal user permissions when using an organization's standard UI controls and API endpoints. These normal user permissions are determined by team membership.
 
