--- a/content/cloud-docs/users-teams-organizations/users.mdx
+++ b/content/cloud-docs/users-teams-organizations/users.mdx
@@ -30,7 +30,7 @@ An organization owner must [invite you to join their organization](/cloud-docs/u
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
-Terraform Cloud sends user invitations by email. If the invited email address matches an existing Terraform Cloud account, the invitee can join the organization with that account. Otherwise, they must create a new account to work with that organization.
+Terraform Cloud sends user invitations by email. If the invited email address matches an existing Terraform Cloud account, the invitee can join the organization with that account. Otherwise, they must create a new account and then join the organization.
 
 ## Site Admin Permissions
 
