--- a/content/cloud-docs/users-teams-organizations/teams.mdx
+++ b/content/cloud-docs/users-teams-organizations/teams.mdx
@@ -127,7 +127,7 @@ Each team can have an API token that is not associated with a specific user. You
 
 ## Managing Workspace Access
 
-You can grant teams various permissions on workspaces. Refer to [workspace permissions](/cloud-docs/users-teams-organizations/permissions#workspace-permissions) for details.
+You can grant teams various permissions on workspaces. Refer to [Workspace Permissions](/cloud-docs/users-teams-organizations/permissions#workspace-permissions) for details.
 
  Terraform Cloud uses the highest permission level from your teams to determine what actions you can take on a particular resource. For example, if you belong to a team that only has permission to read runs for a workspace and another team with admin access to that workspace, Terraform Cloud grants you admin access.
 
