--- a/content/cloud-docs/users-teams-organizations/teams.mdx
+++ b/content/cloud-docs/users-teams-organizations/teams.mdx
@@ -84,7 +84,7 @@ To delete a team:
 
 ### Managing Team Membership
 
-Team structure often resembles your company's group structure. Refer to the [Terraform Recommended Practices guide](/cloud-docs/guides/recommended-practices) for a discussion of how team structure interacts with the structure of your Terraform configurations and the corresponding infrastructure.
+Team structure often resembles your company's organizational structure. Refer to the [Terraform Recommended Practices guide](/cloud-docs/guides/recommended-practices) for a discussion of how team structure interacts with the structure of your Terraform configurations and the corresponding infrastructure.
 
 #### Add Users
 
