--- a/content/cloud-docs/users-teams-organizations/users.mdx
+++ b/content/cloud-docs/users-teams-organizations/users.mdx
@@ -60,7 +60,7 @@ Click **Sessions** in the sidebar to view a list of sessions associated with you
 
 Click **Organizations** in the sidebar to view a list of the organizations where you are a member. If you are on the [owners team][owners], the organization is marked with an **OWNER** badge.
 
-To leave an organization, click the **ellipses (...)** next to the organization and select **Leave organization**. You do not need permission from the owners to leave an organization, but you cannot leave if you are the last member of the owners team. Either add a new owner and then leave or [delete the organization](/cloud-docs/users-teams-organizations/organizations#general).
+To leave an organization, click the **ellipses (...)** next to the organization and select **Leave organization**. You do not need permission from the owners to leave an organization, but you cannot leave if you are the last member of the owners team. Either add a new owner and then leave, or [delete the organization](/cloud-docs/users-teams-organizations/organizations#general).
 
 ### Password
 
