--- a/content/cloud-docs/users-teams-organizations/users.mdx
+++ b/content/cloud-docs/users-teams-organizations/users.mdx
@@ -1,8 +1,8 @@
 ---
 page_title: Users - Terraform Cloud and Terraform Enterprise
 description: >-
-  How to create an account, change user settings, set up two-factor
-  authentication, create user API tokens, and more.
+  Create an account, edit settings, set up two-factor
+  authentication, create API tokens, and more.
 ---
 
 [organizations]: /cloud-docs/users-teams-organizations/organizations
@@ -12,110 +12,97 @@ description: >-
 
 # Users
 
-User accounts belong to individual people. A user can be a member of multiple [organizations][].
+User accounts belong to individual people. Each user can be part of one or more [teams](/cloud-docs/users-teams-organizations/teams), which are granted permissions on workspaces within an organization. A user can be a member of multiple [organizations][].
 
--> **API:** See the [Account API](/cloud-docs/api-docs/account).
+## API
+Use the [Account API](/cloud-docs/api-docs/account) to get account details, update account information, and change your password.
 
 ## Creating an Account
 
-Users must create an account in Terraform Cloud before they can use any of Terraform Cloud's features. Creating an account requires a username, an email address, and a password.
+Creating an account requires a username, an email address, and a password. To use Terraform Cloud, you must create an account through one of the following methods:
 
-If someone invited you to join an existing organization, the invitation email should include a sign-up link.
+- **Invitation Email:** When a user sends you an invitation to join an existing Terraform Cloud organization, the email includes a sign-up link. After you create an account, you will automatically join that organization and can begin using Terraform Cloud.
+- **Sign-Up Page:** For Terraform Cloud, go to [`https://app.terraform.io/signup/account`](https://app.terraform.io/signup/account). For Terraform Enterprise, go to `https://<TFE HOSTNAME>/signup/account`. After you create an account, you will not belong to any organizations. To begin using Terraform Cloud, you can either [create an organization](/cloud-docs/users-teams-organizations/organizations#creating-organizations) or ask an organization owner to send you an invitation email to join their organization.
 
-Alternately, you can create an account from Terraform Cloud's sign-up page. Navigate to the sign-up page via the link on the login page, or go directly to its URL:
+## Joining Organizations and Teams
 
-- For the SaaS version of Terraform Cloud, create a new account at <https://app.terraform.io/signup/account>.
-- For Terraform Enterprise, go to `https://<TFE HOSTNAME>/signup/account`.
-
-### After Creating an Account
-
-If you used an invitation link to create your account, you will automatically join that organization and can start using Terraform Cloud's features right away.
-
-If you created your account without an invitation, you will not initially belong to any organizations, and Terraform Cloud will display a page where you can create a new organization.
-
-![screenshot: the new organization page](/img/docs/org-new.png)
-
-- If you are the first Terraform Cloud user in your organization, use this page to create your Terraform Cloud organization. See [Organizations][] for more information.
-- If you intend to join an existing organization, do not create a new one; instead, send your email address to one of your organization's owners and ask them to invite you. Once you receive and accept the emailed invitation, you can reload the page to begin using Terraform Cloud.
-
-## Team and Organization Membership
-
-To join an organization, you must be invited by an owner of that organization. In order to have any permissions with that organization, an owner will need to add you to one or more teams. For more information, see [Organization Settings: Users][invite] and [Managing Team Membership](/cloud-docs/users-teams-organizations/teams#managing-team-membership).
+An organization owner must [invite you to join their organization](/cloud-docs/users-teams-organizations/organizations#users). After you join, the organization owner must also [add you to one or more teams](/cloud-docs/users-teams-organizations/teams#managing-team-membership).
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
-User invitations are sent by email. If the invited email address matches an existing Terraform Cloud account, the invitee can join the organization with that account; if not, they must create a new account for working with that organization.
+Terraform Cloud sends user invitations by email. If the invited email address matches an existing Terraform Cloud account, the invitee can join the organization with that account. Otherwise, they must create a new account and then join the organization.
 
 ## Site Admin Permissions
 
-On Terraform Enterprise instances, some user accounts have a special "site admin" permission that allows administration of the entire instance.
+On Terraform Enterprise instances, some user accounts have a special site admin permission that allows them to administer the entire instance.
 
-Admin permissions are distinct from normal organization-level permissions, and they apply to a different set of UI controls and API endpoints. Although admin users can administer any resource across the instance when using the site admin pages or the [admin API](/cloud-docs/api-docs/admin), they have a normal user's permissions (with access determined by the teams they belong to) when using an organization's standard UI controls and API endpoints.
+Admin permissions are distinct from normal organization-level permissions, and they apply to a different set of UI controls and API endpoints. Admin users can administer any resource across the instance when using the site admin pages or the [admin API](/cloud-docs/api-docs/admin), but they have normal user permissions when using an organization's standard UI controls and API endpoints. These normal user permissions are determined by team membership.
 
-For more information, see [Administering Terraform Enterprise](/enterprise/admin).
+Refer to [Administering Terraform Enterprise](/enterprise/admin) for more details.
 
 ## User Settings
 
-Terraform Cloud users can manage many of their own account details, including email address, password, API tokens, and two-factor authentication.
-
-To reach your user settings page, click the user icon in the upper right corner and choose "User Settings" from the menu.
-
-Once on this page, can use the navigation on the left to choose which settings to manage.
-
-![The user settings menu item, in the upper right menu.](/img/docs/user-settings.png)
+To view your settings page, click your user icon and select **User settings**. Your **Profile** page appears, showing your username, email address, and avatar.
 
 ### Profile
 
-Terraform Cloud user profiles are very small, consisting only of a username and an email address. You can change either of these from the "Profile" page of the user settings.
+Click **Profile** in the sidebar to view and edit the username and email address associated with your Terraform Cloud account.
 
-~> **Important:** Changing your username can cause important operations to fail. This is because it is used in URL paths to various resources. If external systems make requests to these resources, you'll need to update them prior to making a change.
+~> **Important:** Terraform Cloud includes your username in URL paths to resources. If external systems make requests to these resources, you must update them before you change your username.
 
-Additionally, Terraform Cloud uses [Gravatar](http://en.gravatar.com) to display a user icon if you have associated one with your email address. For details about changing your user icon, see [Gravatar's documentation](http://en.gravatar.com/support/).
+Terraform Cloud uses [Gravatar](http://en.gravatar.com) to display a user icon if you have associated one with your email address. Refer to the [Gravatar documentation](http://en.gravatar.com/support/) for details about changing your user icon.
+
+### Sessions
+
+Click **Sessions** in the sidebar to view a list of sessions associated with your Terraform Cloud account. You can revoke any sessions you do not recognize.
 
 ### Organizations
 
-The "Organizations" settings page lists all of the organizations you belong to. Organizations where you are on [the owners team][owners] are indicated with an "OWNER" badge.
+Click **Organizations** in the sidebar to view a list of the organizations where you are a member. If you are on the [owners team][owners], the organization is marked with an **OWNER** badge.
 
-Organization membership is voluntary, and you can leave an organization without permission from its owners. Use the "..." (ellipsis) button next to an organization to reveal the "Leave organization" link.
-
--> **Note:** You can't leave an organization if you are the last member of its owners team. You can either add a new owner and then leave, or you can [delete the organization](/cloud-docs/users-teams-organizations/organizations#general).
+To leave an organization, click the **ellipses (...)** next to the organization and select **Leave organization**. You do not need permission from the owners to leave an organization, but you cannot leave if you are the last member of the owners team. Either add a new owner and then leave, or [delete the organization](/cloud-docs/users-teams-organizations/organizations#general).
 
 ### Password
 
-The "Password" settings page allows you to change your password. You'll need to confirm your current password, and enter your new password twice.
+Click **Password** in the sidebar to change your password.
 
-Password management isn't available if your Terraform Enterprise instance uses [SAML single sign on](/enterprise/user-management/saml).
+-> **Note:** Password management is not available if your Terraform Enterprise instance uses [SAML single sign on](/enterprise/user-management/saml).
 
 ### Two-Factor Authentication
 
-For additional security, you can enable two-factor authentication, using a TOTP-compliant application or an SMS-capable phone number. Depending on your organization's policies, you might be required to enable two-factor authentication.
+Click **Two Factor Authentication** in the sidebar to enable two-factor authentication. Two-factor authentication requires a TOTP-compliant application or an SMS-capable phone number. An organization can set policies that require two-factor authentication.
 
-For more details, see [Two-Factor Authentication](/cloud-docs/users-teams-organizations/2fa).
+Refer to [Two-Factor Authentication](/cloud-docs/users-teams-organizations/2fa) for details.
 
-### API Tokens
+### SSO
 
-Users can create any number of API tokens, and can revoke existing tokens at any time. To manage API tokens, click the "Tokens" page of the user settings.
+Click **SSO** in the sidebar to review and [remove SSO identity links](/cloud-docs/users-teams-organizations/single-sign-on/linking-user-account#remove-sso-identity-link) associated with your account.
 
-API tokens are necessary for:
+You have an SSO identity for every SSO-enabled Terraform Cloud organization. Terraform Cloud links each SSO identity to a single Terraform Cloud user account. This link determines which account you can use to access each organization.
+
+### Tokens
+
+Click **Tokens** in the sidebar to create, manage, and revoke API tokens. Terraform Cloud has three kinds of API tokens: user, team, and organization. Users can be members of multiple organizations, so user tokens work with any organization where the associated user is a member. Refer to [API Tokens](/cloud-docs/users-teams-organizations/api-tokens) for details.
+
+API tokens are required for the following tasks:
 
 - Authenticating with the [Terraform Cloud API](/cloud-docs/api-docs). API calls require an `Authorization: Bearer <TOKEN>` HTTP header.
-- Authenticating with the [Terraform `remote` backend](/language/settings/backends/remote), which requires a token in the CLI config file or in the backend configuration.
-- Using [private modules](/cloud-docs/registry/using) in command-line Terraform runs on local machines requires [a token in the CLI config file](/cloud-docs/registry/using#authentication).
+- Authenticating with the [Terraform Cloud CLI integration](/cli/cloud/settings) or the [`remote` backend](/language/settings/backends/remote). These require a token in the CLI configuration file or in the backend configuration.
+- Using [private modules](/cloud-docs/registry/using) in command-line runs on local machines. This requires [a token in the CLI configuration file](/cloud-docs/registry/using#authentication).
 
-Terraform Cloud has three kinds of API tokens: user, team, and organization. For more information about team and organization tokens, see [API Tokens](/cloud-docs/users-teams-organizations/api-tokens).
+Protect your tokens carefully because they contain the same permissions as your user account. For example, if you belong to a team with permission to read and write variables for a workspace, another user could use your API token to authenticate as your user account and also edit variables in that workspace. Refer to [permissions](/cloud-docs/users-teams-organizations/permissions) for more details.
 
-Protect your tokens carefully, because they can do anything your user account can. For example, if you belong to a team with permission to read and write variables for a workspace, your API token can edit variables in that workspace. ([More about permissions.](/cloud-docs/users-teams-organizations/permissions))
+#### Creating a Token
+
+ To create a new token:
+  1. Click **Create an API token**. The **Create API token** box appears.
+  1. Enter a **Description** that explains what the token is for and click **Create API token**.
+  1. Copy your token from the box and save it in a secure location. Terraform Cloud only displays the token once, right after you create it. If you lose it, you must revoke the old token and create a new one.
+
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
+#### Revoking a Token
 
-Since users can be members of multiple organizations, user tokens work with any organization their user belongs to.
+To revoke a token, click the **trash can** next to it. That token will no longer be able to authenticate as your user account.
 
-![The user tokens page](/img/docs/user-tokens.png)
-
-- To create a new token, enter a comment to identify it and click the "Generate token" button.
-
-  A token is only displayed once, at the time of creation; if you lose it, you will need to revoke the old token and create a new one. Make sure your description includes enough information so you know which token to revoke later.
-
-- To revoke a token, click the "🗑" (trash can) icon button next to the token's description. That token will no longer be able to authenticate as your user account.
-
--> **Note**: When SAML SSO is enabled there is a session timeout for user API tokens, forcing users to periodically reauthenticate through the web UI in order to keep their tokens active. See the [API Token Expiration](/enterprise/user-management/saml/login#api-token-expiration) section in the SAML SSO documentation for more details.
+-> **Note**: When SAML SSO is enabled there is a session timeout for user API tokens, forcing users to periodically reauthenticate through the web UI in order to keep their tokens active. Refer to [API Token Expiration](/enterprise/user-management/saml/login#api-token-expiration) for details.
